--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <div class="sidebar">
     <img src="img/me.jpg" alt="a photo of me, smiling">
     <h2>About Me</h2>
-    <p>I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. Due to COVID, I took a job at Jiffy Lube while I continued to job hunt. After a while I became more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. That is what led me to Epicodus, and after doing some research I decided to enroll in the C#/React track. When I'm not coding, I like to go fishing, play video games, and try new food.</p>
+    <p>I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. Due to COVID, I took a job at Jiffy Lube while I continued to job hunt. After a while I became more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. That is what led me to Epicodus, and after doing some research I decided to enroll in the C#/React track. <br> When I'm not coding, I enjoy going fishing 🎣, playing video games 🎮, and trying out new food 🍔!</p>
+  </div>
+  <div class="my-projects">
+    <h2>My Projects</h2>
   </div>
 
 </body>
