--- a/index.html
+++ b/index.html
@@ -9,11 +9,28 @@
   <div class="sidebar">
     <img src="img/me.jpg" alt="a photo of me smiling">
       <h2>About Me</h2>
-      <p>I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. Due to COVID, I took a job at Jiffy Lube while I continued to job hunt. After a while I became more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. That is what led me to Epicodus, and after doing some research I decided to enroll in the C#/React track. <br> When I'm not coding, I enjoy going fishing 🎣, playing video games 🎮, and trying out new food 🍔!</p>
+      <p>I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. Due to COVID, I took a job at Jiffy Lube while I continued to job hunt. After a while I became more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. That is what led me to Epicodus, and after doing some research I decided to enroll in the C#/React track.
+      <br>
+      When I'm not coding, I enjoy:
+      <ol>
+        <li>Going fishing 🎣</li>
+        <li>Playing video games 🎮</li>
+        <li>Trying out new food 🍔</li>
+      </ol>
+      </p>
     </div>
   </div>
   <div class="my-projects">
     <h2>My Projects</h2>
+    <p>These are various sample pages I have created in order to practice the fundamentals of HTML and CSS.</p>
+      <h3>Vacation Site</h3>
+      <p>For this project, we got to select a location of our choice and create a webpage for a vacation getaway. For our location, we chose the Maldives.</p>
+      <ul>
+        <li>Languages used: HTML, CSS</li>
+        <li>GitHub repository link: Click here!</li>
+      </ul>
+
+      
   </div>
 
 </body>
