add more projects as well as links to them and styling using cascading and span tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="sidebar">
     <img src="img/me.jpg" alt="a photo of me smiling">
       <h2>About Me</h2>
-      <p>I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. Due to COVID, I took a job at Jiffy Lube while I continued to job hunt. After a while I became more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. That is what led me to Epicodus, and after doing some research I decided to enroll in the C#/React track.
+      <p>Hi there! My name is Louie. I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. Recently I had become more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. That is what led me to Epicodus, and after doing some research I decided to enroll in the C#/React track.
       <br>
       When I'm not coding, I enjoy:
       <ol>
@@ -22,16 +22,25 @@
   </div>
   <div class="my-projects">
     <h2>My Projects</h2>
-    <p>These are various sample pages I have created in order to practice the fundamentals of HTML and CSS.</p>
-      <h3>Vacation Site</h3>
-      <p>For this project, we got to select a location of our choice and create a webpage for a vacation getaway. For our location, we chose the Maldives.</p>
-      <ul>
-        <li>Languages used: HTML, CSS</li>
-        <li>GitHub repository link: Click here!</li>
-      </ul>
-
-      
+    <p>These are various sample pages I have created in order to practice the fundamentals of HTML and CSS. <em>Project names in blue are held in repositories, while project names in green have a live page.</em></p>
+      <div class="repo">
+        <h3><span style="color:blue">Vacation Site</span></h3>
+        <p>For this project, we got to select a location of our choice and create a webpage for a vacation getaway. For our location, we chose the Maldives.</p>
+        <ul>
+         <li>Languages used: HTML, CSS</li>
+          <li>GitHub: <a href="https://github.com/louiesch/vacation-site">Click here!</a></li>
+        </ul>
+      </div>
+      <div class="live">
+        <h3><span style="color:green">Pet Webpage</span></h3>
+        <p>For this project, I created a simple webpage to showcase my two cats, O'Malley and Pompei.</p>
+        <ul>
+          <li>Languages used: HTML, CSS</li>
+          <li>GitHub: <a href="https://louiesch.github.io/pet-webpage/">Click here!</a></li>
+        </ul>
+      </div>
   </div>
+
 
 </body>
 
