--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <div class="sidebar">
     <img src="img/me.jpg" alt="a photo of me smiling">
       <h2>About Me</h2>
-      <p>Hi there! My name is Louie. I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. Recently I had become more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. That is what led me to Epicodus, and after doing some research I decided to enroll in the C#/React track.
+      <p>Hi there! My name is <strong>Louie</strong>. I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. For a while now I had become more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. After doing some research, I found Epicodus and decided to enroll.
+      <br>
       <br>
       When I'm not coding, I enjoy:
       <ol>
@@ -37,6 +38,14 @@
         <ul>
           <li>Languages used: HTML, CSS</li>
           <li>GitHub: <a href="https://louiesch.github.io/pet-webpage/">Click here!</a></li>
+        </ul>
+      </div>
+      <div class="repo">
+        <h3><span style="color:blue">Cupcake Shop</span></h3>
+        <p>This project was to help us familiarize ourselves with CSS styling. It is a simple webpage for a cupcake shop, with various styling with CSS.</p>
+        <ul>
+         <li>Languages used: HTML, CSS</li>
+          <li>GitHub: <a href="https://github.com/louiesch/cupcake-site">Click here!</a></li>
         </ul>
       </div>
   </div>
