add shelter page to list of projects

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
           <li>GitHub: <a href="https://github.com/louiesch/cupcake-site">Click here!</a></li>
         </ul>
       </div>
+      <div class="repo">
+        <h3><span style="color:blue">Animal Shelter</span></h3>
+        <p>This project is a webpage for an animal shelter, primarily to practice using cascading in CSS.</p>
+        <ul>
+         <li>Languages used: HTML, CSS</li>
+          <li>GitHub: <a href="https://github.com/louiesch/shelter">Click here!</a></li>
+        </ul>
+      </div>
   </div>
 
 
