link bootstrap style sheet to html, hange formatting of some headers

--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en-US">
 <head>
   <title>Louie Schoenknecht</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <h1>Louie Schoenknecht's Code Portfolio</h1>
   <div class="sidebar">
     <img src="img/me.jpg" alt="a photo of me smiling">
-      <h2>About Me</h2>
-      <p>Hi there! My name is <strong>Louie</strong>. I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. For a while now I had become more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. After doing some research, I found Epicodus and decided to enroll.
-      <br>
-      <br>
+    <h2>About Me</h2>
+    <p>Hi there! My name is <strong>Louie</strong>. I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. For a while now I had become more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. After doing some research, I found Epicodus and decided to enroll.
       When I'm not coding, I enjoy:
       <ol>
         <li>Going fishing 🎣</li>
