--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
   <h1>Louie Schoenknecht's Code Portfolio</h1>
   <div class="sidebar">
     <img src="img/me.jpg" alt="a photo of me smiling">
-    <h2>About Me</h2>
-    <p>Hi there! My name is <strong>Louie</strong>. I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. For a while now I had become more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. After doing some research, I found Epicodus and decided to enroll.
-      When I'm not coding, I enjoy:
+    <h3>About Me</h3>
+    <p>Hi there! My name is <strong>Louie</strong>. I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. For a while now I had become more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. After doing some research, I found Epicodus and decided to enroll.</p>
+    <p>When I'm not coding, I enjoy:</p>
       <ol>
         <li>Going fishing 🎣</li>
         <li>Playing video games 🎮</li>
         <li>Trying out new food 🍔</li>
       </ol>
-      </p>
     </div>
   </div>
   <div class="my-projects">
