fix indentation issues

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <h3>About Me</h3>
     <p>Hi there! My name is <strong>Louie</strong>. I recently moved to Seattle, Washington after completing my BA in Philosophy at Oklahoma State University. For a while now I had become more interested in pursing further education, but was unsure if I should go to graduate school or try a work training program. After doing some research, I found Epicodus and decided to enroll.</p>
     <p>When I'm not coding, I enjoy:</p>
-      <ol>
-        <li>Going fishing 🎣</li>
-        <li>Playing video games 🎮</li>
-        <li>Trying out new food 🍔</li>
-      </ol>
-    </div>
+    <ol>
+      <li>Going fishing 🎣</li>
+      <li>Playing video games 🎮</li>
+      <li>Trying out new food 🍔</li>
+    </ol>
   </div>
-  <div class="my-projects">
-    <h2>My Projects</h2>
-    <p>These are various sample pages I have created in order to practice the fundamentals of HTML and CSS. <em>Project names in blue are held in repositories, while project names in green have a live page.</em></p>
+  <div class="container">
+    <div class="my-projects">
+      <h2>My Projects</h2>
+      <p>These are various sample pages I have created in order to practice the fundamentals of HTML and CSS. <em>Project names in blue are held in repositories, while project names in green have a live page.</em></p>
       <div class="repo">
         <h3><span style="color:blue">Vacation Site</span></h3>
         <p>For this project, we got to select a location of our choice and create a webpage for a vacation getaway. For our location, we chose the Maldives.</p>
         <ul>
-         <li>Languages used: HTML, CSS</li>
+          <li>Languages used: HTML, CSS</li>
           <li>GitHub: <a href="https://github.com/louiesch/vacation-site">Click here!</a></li>
         </ul>
       </div>
@@ -42,7 +42,7 @@
         <h3><span style="color:blue">Cupcake Shop</span></h3>
         <p>This project was to help us familiarize ourselves with CSS styling. It is a simple webpage for a cupcake shop, with various styling with CSS.</p>
         <ul>
-         <li>Languages used: HTML, CSS</li>
+          <li>Languages used: HTML, CSS</li>
           <li>GitHub: <a href="https://github.com/louiesch/cupcake-site">Click here!</a></li>
         </ul>
       </div>
@@ -50,13 +50,11 @@
         <h3><span style="color:blue">Animal Shelter</span></h3>
         <p>This project is a webpage for an animal shelter, primarily to practice using cascading in CSS.</p>
         <ul>
-         <li>Languages used: HTML, CSS</li>
+          <li>Languages used: HTML, CSS</li>
           <li>GitHub: <a href="https://github.com/louiesch/shelter">Click here!</a></li>
         </ul>
       </div>
+    </div>
   </div>
-
-
 </body>
-
 </html>
